1.6.1
-----
1. Add option to have rounded popup menus.
2. Allow rounded tooltips when not compositing.

1.6.0
-----
 1. Add 'glow' focus option - this is now the default. (Note, for firefox
    the label of checkboxes and radiobuttons will have a rounded focus rect
    drawn - this is because the 'glow' does not seem to work for firefox's
    usage of checks and radios).
 2. Fix potential crash in rgbToHsv
 3. Use square-ish focus for view items if using squared selection.
 4. Store dialog/window opacity in an XProperty - so that kwin theme can use
    this as the titlebar opacity.
 5. Don't hide focus rect on listview headers when mouse-overed.
 6. Fix crash due to missing gtk_widget_get_allocation - this was only
    introduced in Gtk 2.18.0
 7. Group boxes need to respect 'square frames' setting.
 8. Some Java Swing fixes/workarounds:
     - always use plain slider style
     - dont depress sliders
     - slightly improve tabs
 9. Added option to specify tooltip background appearance.
10. Added options to draw shaded, or faded, group boxes.
11. Added options to specify location of group box label; inside, outside.
12. Dont use the 'no buttons' scrollbar setting for mozilla apps. This setting
    seems to cause odd behaviour with the horizontal scrollbar (sometimes it is
    not displayed). Use signle top/bottom left/right buttons instead.
13. Draw coloured mouse over for 'checked' toggle buttons.
14. Fix look of some sunken toolbar button in firefox.
15. Use Highlight colour for default button glow.
16. When KDE4's 'Inactive selection changes colour' setting is enabled, dont change
    the selection colour - use same colour, but set 50% transparent.
17. Add "npviewer.bin" to list of apps that are brower plugin viewers - opacity
    settings are excluded from these.
18. Exclude opacity settings from SWT apps (e.g. eclipse), totem, and sonata.
19. Default sub-menu popup delay to 225 - matches Gtk2 standard default. The previous