@@ -2,6 +2,7 @@
 -----
 1. Add option to have rounded popup menus.
 2. Allow rounded tooltips when not compositing.
+3. Use a hack to re-enable shadows for rounded tooltips.
 
 1.6.0
 -----
